objects/ESC_Case_Usage__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Billable_Time__c</fullName>
        <label>Billable Time(Minutes)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Usage</relationshipLabel>
        <relationshipName>Case_Usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ESC_Comments__c</fullName>
        <description>Used to capture the comments for modifying timer manually</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Duration__c</fullName>
        <description>No of Seconds Case has been opened/viewed by CaseOwner</description>
        <inlineHelpText>Duration in Minutes that owner has viewed this record in a particular session</inlineHelpText>
        <label>Time Spent (Minutes)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_EndTime__c</fullName>
        <formula>IF(ISPICKVAL(ESC_Type__c,&apos;System&apos;),CreatedDate,NULL)</formula>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Starttime__c</fullName>
        <formula>IF(ISPICKVAL(ESC_Type__c,&apos;System&apos;),DATETIMEVALUE(CreatedDate ) - (ESC_Duration__c/(24*60*60)),NULL)</formula>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Type__c</fullName>
        <description>This is to check for whether System Calculated(Auto) or Manually entered value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System</fullName>
                    <default>true</default>
                    <label>System</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Viewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the field to capture who viewed the case</description>
        <label>Case Viewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Usage</label>
    <nameField>
        <displayFormat>CU-{0000000}</displayFormat>
        <label>Case Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>